<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.qibla.QiblaActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stateListAnimator="@animator/appbar_elevation"
            android:theme="@style/Theme.MuslimApp.AppBarOverlay"/>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

        <!--1 missing-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <FrameLayout
                android:id="@+id/compass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.24000001">

                <FrameLayout
                    android:id="@+id/caaba_compass"
                    android:layout_width="340dp"
                    android:layout_height="340dp"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/BackgroundCompass"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/caaba"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="top|center_horizontal"
                        android:src="@drawable/ic_caaba"
                        tools:ignore="ContentDescription" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/indicator"
                    android:layout_width="285dp"
                    android:layout_height="285dp"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_compass_titik"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|top"
                        android:text="@string/north"
                        android:textSize="16sp"
                        android:layout_marginTop="45dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/south"
                        android:layout_marginBottom="45dp"
                        android:textSize="16dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:text="@string/west"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginStart="45dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:text="@string/east"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginEnd="45dp"/>

                </FrameLayout>

                <ImageView
                    android:id="@+id/arrow_compass"
                    android:layout_width="285dp"
                    android:layout_height="285dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_compass_arrow"
                    tools:ignore="ContentDescription"/>

            </FrameLayout>

            <TextView
                android:id="@+id/province"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/compass"
                app:layout_constraintVertical_bias="0.19999999"
                android:drawableStart="@drawable/ic_location"
                android:drawablePadding="8dp"
                android:drawableTint="@color/black"
                tools:text="Jakarta" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>